# libg722

./: .gitignore  CMakeLists.txt  GNUmakefile  LICENSE  MANIFEST.in  Makefile  README.md  build_ios.sh  d  g722.h  g722_codec.h  g722_common.h  g722_decode.c  g722_decoder.h  g722_encode.c  g722_encoder.h  g722_private.h  library.properties  setup.py  test.c  test.checksum  test.py
.github/workflows/: build_and_test.yml
debian/: changelog  control  libg722-dev.install  libg722-test.install  libg722.install  rules
docker/: Dockerfile.build  Dockerfile.python_wheels
ld_sugar/: Symbol.map  Versions.def  g722.def
python/: G722_mod.c  G722_numpy_api.h  G722_numpy_mod.c  symbols.map
scripts/: do-test.sh
test_data/: fullscale.g722  pcminb.checksum  test.checksum
tests/: test_decode.py  test_encode.py  test_encode_decode.py
